# agent-accountability-receipt

./: .gitignore  LICENSE  NOTICE  README.md  requirements.txt  schema.json
.github/workflows/: ci.yml
agent_harness/: anthropic_run.py  openai_run.py  receipt_writer.py  tools.py
agent_harness/configs/: policy.yaml
examples/: cui-exfiltration-blocked.json  demo-receipt.json  human-checkpoint-rejected.json  receipt-revoked.json
examples/sample-reports/: README.md
reference_impl/: generate_receipt.py  scenario_cui_blocked.py  scenario_human_rejected.py  scenario_revoked.py
tools/: PYPI_README.md  neox_verify.py  pyproject.toml  setup.cfg
