[metadata]
name = neox-verify
version = 0.1.1
author = Julio Berroa / NeoXFortress LLC
author_email = contact@neoxfortress.com
description = Open-source verifier for NeoXFortress Agent Accountability Receipts
long_description = file: tools/PYPI_README.md
long_description_content_type = text/markdown
url = https://github.com/NeoXFortress/agent-accountability-receipt
project_urls =
    Bug Tracker = https://github.com/NeoXFortress/agent-accountability-receipt/issues
    Documentation = https://neoxfortress.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Information Technology
    Topic :: Security
    Topic :: System :: Logging
    Topic :: Software Development :: Quality Assurance

[options]
python_requires = >=3.10
install_requires =
    jsonschema>=4.0

[options.entry_points]
console_scripts =
    neox = neox_verify:main
